# psmove_dk2_coreg

./: .gitignore  CMakeLists.txt  README.md
matlab/: output.txt  output_camerapose.csv  output_camerapose.txt  test.asv  test.m
src/: psmdk2.c  psmdk2.cpp
